QmidiNet - A MIDI Network Gateway via UDP/IP Multicast
------------------------------------------------------

ChangeLog


0.4.2  2016-11-14  A Fall'16 release.

- Almost complete overhaul on the configure script command
  line options, wrt. installation directories specification,
  eg. --prefix, --bindir, --libdir, --datadir and --mandir.


0.4.1  2016-09-14  End of Summer'16 release.

- Dropped the --enable-qt5 from configure as found redundant
  given that's the build default anyway (suggestion by Guido
  Scholz, while for Qtractor, thanks).


0.4.0  2016-04-05  Spring'16 release frenzy.

- Allegedly fixed for the socketopt(IP_MULTICAST_LOOP) reverse
  semantics on Windows platforms (as suggested by Paul Davis, 
  from Ardour ipMIDI implementation, thanks).

- Added application keywords to freedesktop.org's AppData.


0.3.0  2015-09-21  Summer'15 release frenzy.

- System tray icon now blinks on network send/receive activity.

- Prefer Qt5 over Qt4 by default with configure script.

- Complete rewrite of Qt4 vs. Qt5 configure builds.

- Fixed for some strict tests for Qt4 vs. Qt5 configure builds.


0.2.1  2015-03-23  Pre-LAC2015 pre-season release.

- Reset (to network defaults) button added to options dialog,
  which also gets some layout reform.

- Added application description as freedesktop.org's AppData.

- Previously hard-coded UDP/IP multicast address (225.0.0.37) is
  now an user configurable option.


0.2.0  2014-06-19  Headless finally.

- A man page has beed added (making up Alessio Treglia's work on
  debian, thanks).

- First attempt to allow a headless application run mode, without
  GUI or system-tray icon accessibility, with all options given 
  as command line arguments.

- Allow the build system to include an user specified LDFLAGS.


0.1.3  2013-12-31  A fifth of a Jubilee.

- More preparations for Qt5 configure build.

- Added missing blank spaces on some warning messages text lines.

- Preparations for Qt5 migration.

